--- a/Server/Public/style.css
+++ b/Server/Public/style.css
@@ -16,3 +16,33 @@ h1{
 #corn{
   max-width: 400px;
 }
+
+button{
+    margin: 2px;
+    display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #03010d;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 4px rgb(55, 56, 62);
+}
+
+button:hover {background-color: #111023}
+
+button:active {
+  background-color: #161622;
+  box-shadow: 0 5px rgb(0, 0, 0);
+  transform: translateY(4px);
+}
+
+.buttonline{
+  display: flex;
+  justify-content: center;
+  
+}
