--- a/Server/Public/style.css
+++ b/Server/Public/style.css
@@ -3,16 +3,18 @@ h1{
 }
 
 .entire-corn{
-   background-color: aliceblue;
    height: 110vh;
 }
 
 .head{
     background-color: rgb(239, 247, 250);
-    font-size: smaller;
+    font-size:40px;
     border-radius: 5px;
     height: 25%;
     margin: 0pz;
+
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 .fancybuttons{
     display: inline-block;
@@ -28,6 +30,9 @@ h1{
 }
 
 .calc-block{
+    border-width: 10px;
+    border-style: solid;
+    border-color: #111023;
     text-align: center;
     display: block;
     height: 70%;
@@ -38,6 +43,10 @@ h1{
     margin-left: auto;
     margin-right: auto;
 }
+#logo{
+max-height: 200px;
+}
+
 
 #corn{
   position: static;
@@ -80,8 +89,26 @@ button:active {
   
 }
 body{
-    font-family: fantasy;
+    font-family: 'Orbitron';
 }
 html{
-    background-color: pink;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 300% 300%;
+    animation: gradient 5s ease infinite;
+}
+
+p{
+    margin-top: 0px;
+    margin-bottom: 0px
+}
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
 }
